<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:layout_marginTop="100dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/WusBEE"
        android:textColor="@color/honey"
        android:textSize="50sp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/honey"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/texts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user_img"
                android:paddingTop="15dp"
                android:contentDescription="@string/Username"/>

            <EditText
                android:id="@+id/user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Username"
                android:paddingStart="20dp"
                android:paddingEnd="40dp"
                android:layout_toEndOf="@+id/user_icon"
                android:inputType="text" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pass_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pass_img"
                android:paddingTop="15dp"
                android:contentDescription="@string/Password"/>

            <EditText
                android:id="@+id/pass_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:paddingStart="20dp"
                android:paddingEnd="40dp"
                android:layout_toEndOf="@+id/pass_icon"
                android:inputType="textPassword"/>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/log_in_button"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Log_in"
        android:textColor="@color/yellow_honey"
        android:background="@color/brown"
        android:textSize="20sp"
        android:layout_below="@+id/texts"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_in_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="Don`t have an account?"
        android:paddingTop="20dp"/>

    <Button
        android:id="@+id/sign_in"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/question"
        android:text="Sign up!"
        android:textColor="@color/yellow_honey" />

</RelativeLayout>




